--- a/css/style.css
+++ b/css/style.css
@@ -138,8 +138,8 @@ body p {
   padding-top: 1.5rem;
   margin-bottom: 1.5rem;
   border-top: 0.0625rem solid #ece9ec;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 0.625rem;
+  padding-right: 0.625rem;
 }
 
 .card__statNum {
@@ -154,5 +154,6 @@ body p {
   font-size: 0.625rem;
   line-height: 0.75rem;
   color: #6a6f81;
+  letter-spacing: 1.5px;
 }
 /*# sourceMappingURL=style.css.map */
